--- a/configs/cost_config.json
+++ b/configs/cost_config.json
@@ -5,13 +5,13 @@
     "master_file":"servers/master.txt",
     "servers_file":"servers/servers.txt",
     "user":"ubuntu",
-    "instance_type":"c5.9xlarge",
-    "master_instance_type":"c5.9xlarge",
+    "instance_type":"t3.micro",
+    "master_instance_type":"t3.micro",
     "ami":"latest",
     "ami_instance_ip":"ec2-3-95-21-158.compute-1.amazonaws.com",
     "datagen_instance_ip":"ec2-34-211-82-18.us-west-2.compute.amazonaws.com",
     "region":"us-east-1",
-    "nworkers":8,
+    "nworkers":2,
     "root_size":32,
     "swap_size_master":1,
     "ami_tag":"cost"
