--- a/configs/cost_config.json
+++ b/configs/cost_config.json
@@ -2,17 +2,17 @@
     "identity_file":"prthaker-slate",
     "key_pair":"prthaker-slate.pem",
     "cluster_name":"cost",
-    "master_file":"servers/master.txt",
+    "driver_file":"servers/driver.txt",
     "servers_file":"servers/servers.txt",
     "user":"ubuntu",
     "instance_type":"c5.9xlarge",
-    "master_instance_type":"c5.9xlarge",
+    "driver_instance_type":"c5.9xlarge",
     "ami":"latest",
     "ami_instance_ip":"ec2-3-95-21-158.compute-1.amazonaws.com",
     "datagen_instance_ip":"ec2-34-211-82-18.us-west-2.compute.amazonaws.com",
     "region":"us-east-1",
     "nworkers":8,
     "root_size":32,
-    "swap_size_master":1,
+    "swap_size_driver":1,
     "ami_tag":"cost"
 }
